--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,12 @@ body {
     line-height: 150%;
     padding: 20px;
 }
+
+#prompt {
+    background-color: #000000;
+    color: green;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    outline: none;
+}
