--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
     font-family: "Lucida Console", Monaco, monospace;
-    font-size: 12px;
+    font-size: 16px;
     background-color: #000000;
-    color: green;
+    color: #33cc33;
 }
 
 #content {
@@ -12,8 +12,6 @@ body {
 }
 
 .prompt {
-    background-color: #000000;
-    color: green;
     border: 0;
     margin: 0;
     padding: 0;
