--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: monospace;
     font-size: 16px;
     background-color: #000000;
     color: #33cc33;
